--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "4.1.1"
+  },
   "dependencies": {
     "boom": "^3.1.2",
+    "bower": "^1.7.7",
     "hapi": "^13.0.0",
     "inert": "^3.2.0",
     "mandrill-api": "^1.0.45",
